RESOLVED FIXED111299
Web Inspector: Adding new rules broken if a <style> tag is added to document dynamically
https://bugs.webkit.org/show_bug.cgi?id=111299
Summary Web Inspector: Adding new rules broken if a <style> tag is added to document ...
Alexander Pavlov (apavlov)
Reported 2013-03-04 02:48:19 PST
Steps to reproduce the problem: 1. Open attached testcase in Chrome. 2. Open developer tools (press Ctrl-Shift-I). 3. Switch to the Elements tab and select the body element. 4. Under Styles press the + (New Style Rule) button. 5. Press Tab (go to entering a CSS property), enter "background", press Tab again (go to entering the value), enter "red" and press Enter. What is the expected behavior? The new style rule is added and the page background gets colored red. What went wrong? The new style rule simply disappears, page appearance doesn't change. Upstreaming https://code.google.com/p/chromium/issues/detail?id=178109
Attachments
Patch (6.48 KB, patch)
2013-03-04 03:18 PST, Alexander Pavlov (apavlov)
pfeldman: review+
Alexander Pavlov (apavlov)
Comment 1 2013-03-04 03:18:03 PST
Alexander Pavlov (apavlov)
Comment 2 2013-03-04 05:36:49 PST
Note You need to log in before you can comment on or make changes to this bug.