Web Inspector: Adding new rules broken if a <style> tag is added to document dynamically https://bugs.webkit.org/show_bug.cgi?id=111299

Reviewed by Pavel Feldman.

Source/WebCore:

The CSSStyleSheet instance should be retrieved directly from the HTMLStyleElement just created,
not from the document.styleSheets list.

Test: inspector/styles/add-new-rule-with-style-after-body.html

* inspector/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::viaInspectorStyleSheet):

LayoutTests:

* inspector/styles/add-new-rule-with-style-after-body-expected.txt: Added.
* inspector/styles/add-new-rule-with-style-after-body.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@144622 bbb929c8-8fbe-4397-9dbb-9b2b20218538